--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -33,25 +33,47 @@ $ipad: 768px;
 .App-header {
   height: 100vh;
   display: block;
-  text-align: center;
+  // text-align: center;
   padding: 5%;
-  // border: 2px solid red;
+  // border: 2px solid blue;
   h1 {
     font-size: 3.5rem;
     font-weight: 200;
   }
-  img {
-    height: 40vh;
+  .logo {
     display: block;
-    text-align: center;
+    border: 2px solid red;
+    height: 70vh;
+    // animation: walkingOne 5s ease-in-out infinite;
+  }
+  @keyframes walkingOne {
+    25% {
+      margin-left: 40px;
+    }
+    50% {
+      margin-left: 60px;
+      margin-top: 100px;
+      border: 2px solid green;
+    }
+
+    100% {
+      margin-left: 180px;
+    }
   }
 }
 
 .letters {
   font-size: 2rem;
   font-weight: 400;
+  margin-top: 0;
 }
 .contact {
   border: 2px solid red;
   height: 70vh;
+}
+.about {
+  padding: $padding;
+  height: 90vh;
+  border: 2px solid green;
+  margin-top: 450px;
 }
