--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -31,33 +31,68 @@ $ipad: 768px;
 // }
 
 .App-header {
-  height: 100vh;
+  height: 80vh;
   display: block;
-  // text-align: center;
-  padding: 5%;
-  // border: 2px solid blue;
-  h1 {
-    font-size: 3.5rem;
-    font-weight: 200;
+  padding: 2%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  .typing {
+    grid-column: 1/2;
+    grid-row: 1/3;
   }
-  .logo {
+
+  .svg-container {
+    grid-column: 3/5;
+    grid-row: 1/3;
+    padding: 2%;
     display: block;
-    border: 2px solid red;
-    height: 70vh;
-    // animation: walkingOne 5s ease-in-out infinite;
+    transition: all 5s ease-in-out;
+    background: url("../assets/human.svg") 0 0 no-repeat;
+
+    p {
+      text-align: center;
+      font-size: 1.5rem;
+      opacity: 0;
+      font-weight: bold;
+      transition: all 15s ease-in-out infinite;
+      margin-left: 20px;
+      animation: arriving 60s steps(12);
+    }
   }
-  @keyframes walkingOne {
+  @keyframes sliding {
+    0% {
+      background-position: 0 0;
+    }
+    100% {
+      background-position: 0 100px;
+      margin-left: 60px;
+    }
+  }
+
+  @keyframes arriving {
+    0% {
+      opacity: 0;
+    }
     25% {
-      margin-left: 40px;
+      opacity: 1;
+      font-weight: 500;
     }
     50% {
-      margin-left: 60px;
-      margin-top: 100px;
-      border: 2px solid green;
+      opacity: 0;
     }
-
     100% {
-      margin-left: 180px;
+      opacity: 1;
+      font-weight: 600;
+      font-size: 2rem;
+    }
+  }
+
+  .svg-container:hover {
+    p:hover {
+      opacity: 1;
+      transform: scale(1.1);
+      font-weight: 600;
     }
   }
 }
