--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -16,8 +16,8 @@ $colors: (
 }
 $mobile: 300px;
 $ipad: 768px;
-@mixin desktop {
-  @media (min-width: #{$desktop}) {
+@mixin mobile {
+  @media (min-width: #{$mobile})  and (max-width : $ipad) {
     @content;
   }
 }
@@ -28,41 +28,148 @@ $ipad: 768px;
 }
 
 nav {
-  // border: 2px solid blue;
   padding: padding + 5;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: auto;
   gap: 2%;
+
   .name {
     grid-column: 1/2;
     grid-row: 1/3;
     padding: 6%;
-    // border: 2px solid red;
-    .link {
-      text-decoration: none;
-      // color: color(black);
-      font-family: "Dancing Script";
-      font-size: 2rem;
-      font-size: 500;
-    }
-    .link:hover {
-      color: coral;
+
+    li {
+      list-style: none;
+
+      .link {
+        text-decoration: none;
+        font-family: "Dancing Script";
+        font-size: 2rem;
+        font-size: 500;
+      }
+      .link:hover {
+        color: coral;
+      }
     }
   }
+
   .others {
-    grid-column: 2/4;
+    grid-column: 2/5;
     grid-row: 1/3;
     padding: 3%;
-    // border: 2px solid green;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     align-items: flex-end;
-    .link {
-      text-decoration: none;
-      color: color(black);
-      margin-left: 55px;
+    li {
+      list-style: none;
+
+      .link {
+        text-decoration: none;
+        color: color(black);
+        margin-left: 85px;
+        text-decoration: none;
+        transition: text-decoration 3s ease-in;
+      }
+      .link:hover {
+        color: coral;
+        text-decoration: underline sandybrown;
+      }
+    }
+  }
+
+  .nav-toggler {
+    display: none;
+  }
+  .theme-toggle {
+    grid-column: 5/6;
+    grid-row: 1/3;
+    padding: 7%;
+
+    li {
+      list-style: none;
+      float: right;
+      margin-top: 5px;
+    }
+  }
+  @include mobile() {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    height: 12vh;
+    grid-template-rows: auto;
+    position: relative;
+
+    gap: 2%;
+    .name {
+      grid-column: 1/2;
+      display: inline;
+
+      grid-row: 1/2;
+    }
+
+    .hidden {
+      display: none;
+      position: absolute;
+
+      z-index: 1;
+
+      right: 40px;
+      width: 70vw;
+      padding: 5%;
+      text-align: center;
+      transition: all 4s cubic-bezier(0.79, 0.88, 0.83, 0.67);
+      background-color: #ff9b21;
+
+      li {
+        text-align: center;
+        margin-right: 70px;
+        text-transform: lowercase;
+        .link {
+          text-align: center;
+          line-height: 22px;
+          // border-bottom: 1px solid black;
+        }
+      }
+      @include ipad() {
+        width: 80vw;
+      }
+    }
+    .hidden.show {
+      display: block;
+      transform: scale(1.3);
+      height: 120px;
+      padding: $padding + 2;
+      top: 85px;
+    }
+    .hidden.hide {
+      display: none;
+    }
+    .nav-toggler {
+      display: inline;
+      grid-column: 4/5;
+      grid-row: 1/2;
+      padding: 3%;
+      text-align: right;
+      li {
+        list-style: none;
+        margin-top: 10px;
+      }
+    }
+    .theme-toggle {
+      grid-column: 2/4;
+      grid-row: 1/2;
+      padding: 3%;
+      display: inline;
+
+      text-align: center;
+      li {
+        text-align: center;
+        margin-right: 70px;
+        @include ipad() {
+          margin-right: 155px;
+        }
+      }
     }
   }
 }
