--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -7,16 +7,19 @@ $colors: (
   dark-blue: hsl(233, 12%, 13%),
   pale-red: hsl(13, 100%, 96%),
   burnt-orange: lighten(#f24405, 10%),
-  dark: hsl(228, 39%, 23%)
+  dark: hsl(228, 39%, 23%),
+  yellow: #ff9b21,
+  light-yellow: lighten(#ff9b21, 10%)
 );
 
 @function color($color-name) {
   @return map-get($colors, $color-name);
 }
-$desktop: 801px;
+$mobile: 300px;
+// (min-width: 300px) and (max-width: 800px)
 $ipad: 768px;
-@mixin desktop {
-  @media (min-width: #{$desktop}) {
+@mixin mobile {
+  @media (min-width: #{$mobile})  and (max-width : $ipad) {
     @content;
   }
 }
@@ -28,23 +31,95 @@ $ipad: 768px;
 
 .about {
   // padding: $padding;
-  height: 100vh;
+  height: 90vh;
   display: grid;
-  grid-template-columns: repeat(4/1fr);
-  gap: 2px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0;
 
   .profile-img {
     grid-column: 1/3;
+    grid-row: 1/3;
     background: url("../assets/lape.jpeg") no-repeat;
-    clip-path: circle(20% at 70% 60%);
+    clip-path: circle(20% at 62.5% 65%);
     transition: clip-path 5s;
+    p {
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: 500;
+      opacity: 0;
+      transition: opacity 10s ease-in-out;
+    }
+    p:hover {
+      opacity: 1;
+    }
   }
   .profile-img:hover {
     clip-path: circle(80%);
   }
   .profile-details {
-    border: 1px solid blue;
+    padding: $padding;
     grid-column: 3/5;
-    background-color: pink;
+    grid-row: 1/3;
+    text-align: center;
+    background-color: color(light-yellow);
+    clip-path: polygon(100% 0, 100% 75%, 0 100%, 0 0);
+    transition: transform 10s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+    h2 {
+      font-family: "Dancing Script";
+      letter-spacing: 5px;
+      font-size: 2.5rem;
+    }
+    p {
+      font-family: "Assistant";
+      line-height: 25px;
+    }
+    ul {
+      span {
+        font-family: "Assistant";
+      }
+      li {
+        list-style: none;
+        font-family: "Assistant";
+        line-height: 28px;
+      }
+    }
+  }
+  .profile-details:hover {
+    transform: scale(1.1);
+  }
+
+  @include mobile() {
+    display: grid;
+    gap: 0;
+    height: 110vh;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    // border: 2px solid red;
+    .profile-img {
+      grid-column: 1/5;
+      grid-row: 1/10;
+      // border: 1px solid green;
+      background: url("../assets//smiling-lape.jpeg") 0 0 no-repeat;
+      background-size: 100% 100%;
+      clip-path: none;
+      animation: photoMove 5s steps(6) alternate infinite;
+    }
+    .profile-details {
+      grid-column: 1/5;
+      grid-row: 10/12;
+      padding: $padding - 2;
+      clip-path: none;
+    }
+  }
+}
+
+@keyframes photoMove {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background: url("../assets/angry.jpeg");
+    background-position: 0 0;
+    background-size: 100% 100%;
   }
 }
