--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -40,7 +40,8 @@ $ipad: 768px;
     grid-column: 1/3;
     grid-row: 1/3;
     background: url("../assets/lape.jpeg") no-repeat;
-    clip-path: circle(20% at 62.5% 65%);
+    background-position: center;
+    clip-path: circle(20% at 57% 25%);
     transition: clip-path 5s;
     p {
       text-align: center;
