--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -58,42 +58,48 @@ $ipad: 768px;
     @include mobile() {
       height: 55vh;
     }
-    p {
-      text-align: center;
-      font-size: 1.5rem;
-      opacity: 0;
-      font-weight: bold;
-      transition: all 15s ease-in-out infinite;
-      margin-left: 70px;
-      animation: arriving 60s steps(12) infinite 4s;
-      @include mobile() {
+    .link-about {
+      text-decoration: none;
+      text-align: right;
+      margin-left: 50px;
+      p {
         text-align: right;
-        font-size: 1rem;
-        animation: knowMe 60s steps(13, start) infinite;
-        margin-left: 160px;
-        // border: 2px solid blue;
-        @keyframes knowMe {
-          0% {
-            opacity: 0;
-          }
-          25% {
-            opacity: 1;
-            font-weight: 500;
-          }
-          50% {
-            opacity: 0;
-          }
-          100% {
-            opacity: 1;
-            font-weight: 600;
-            font-size: 1.5rem;
+        font-size: 1.5rem;
+        opacity: 0;
+        // border: 2px solid red;
+        font-weight: bold;
+        transition: all 15s ease-in-out infinite;
+        margin-left: 100px;
+        animation: arriving 60s steps(12) infinite 4s;
+        @include mobile() {
+          text-align: right;
+          font-size: 1rem;
+          animation: knowMe 60s steps(13, start) infinite;
+          margin-left: 160px;
+          // border: 2px solid blue;
+          @keyframes knowMe {
+            0% {
+              opacity: 0;
+            }
+            25% {
+              opacity: 1;
+              font-weight: 500;
+            }
+            50% {
+              opacity: 0;
+            }
+            100% {
+              opacity: 1;
+              font-weight: 600;
+              font-size: 1.5rem;
+            }
           }
         }
-      }
-      @include ipad() {
-        margin-left: -20px;
-        text-align: center;
-        // border: 2px solid red;
+        @include ipad() {
+          margin-left: -20px;
+          text-align: center;
+          // border: 2px solid red;
+        }
       }
     }
   }
