--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -39,7 +39,7 @@ $ipad: 768px;
   .profile-img {
     grid-column: 1/3;
     grid-row: 1/3;
-    background: url("../assets/lape.jpeg") no-repeat;
+    background: url("../assets/lape.png") no-repeat;
     background-position: center;
     clip-path: circle(20% at 57% 25%);
     transition: clip-path 5s;
@@ -64,7 +64,7 @@ $ipad: 768px;
     text-align: center;
     background-color: color(light-yellow);
     clip-path: polygon(100% 0, 100% 75%, 0 100%, 0 0);
-    transition: transform 10s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+    transition: all 3s cubic-bezier(0.55, 0.085, 0.68, 0.53);
     h2 {
       font-family: "Dancing Script";
       letter-spacing: 5px;
@@ -87,6 +87,7 @@ $ipad: 768px;
   }
   .profile-details:hover {
     transform: scale(1.1);
+    background-color: color(pale-red);
   }
 
   @include mobile() {
@@ -98,18 +99,21 @@ $ipad: 768px;
     // border: 2px solid red;
     .profile-img {
       grid-column: 1/5;
-      grid-row: 1/10;
+      grid-row: 1/9;
       // border: 1px solid green;
       background: url("../assets//smiling-lape.jpeg") 0 0 no-repeat;
       background-size: 100% 100%;
       clip-path: none;
-      animation: photoMove 5s steps(6) alternate infinite;
+      // animation: photoMove 5s steps(6) alternate infinite;
     }
     .profile-details {
       grid-column: 1/5;
-      grid-row: 10/12;
+      grid-row: 9/11;
       padding: $padding - 2;
       clip-path: none;
+      p {
+        margin: 10px;
+      }
     }
   }
 }
