--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -39,7 +39,7 @@ $ipad: 768px;
   .profile-img {
     grid-column: 1/3;
     grid-row: 1/3;
-    background: url("../assets/lape.png") no-repeat;
+    background: url("../assets/lape.jpeg") no-repeat;
     background-position: center;
     clip-path: circle(20% at 57% 25%);
     transition: clip-path 5s;
@@ -112,7 +112,17 @@ $ipad: 768px;
       padding: $padding - 2;
       clip-path: none;
       p {
-        margin: 10px;
+        margin: 15px;
+      }
+      ul {
+        span {
+          margin-right: 25px;
+          // border: 2px solid red;
+        }
+        li {
+          // border: 1px solid black;
+          margin-right: 35px;
+        }
       }
     }
   }
