--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -8,7 +8,8 @@ $colors: (
   pale-red: hsl(13, 100%, 96%),
   burnt-orange: lighten(#f24405, 10%),
   dark: hsl(228, 39%, 23%),
-  black: black
+  black: black,
+  light-yellow: lighten(#ff9b21, 40%)
 );
 
 @function color($color-name) {
