--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -48,6 +48,7 @@ $ipad: 768px;
       legend {
         font-size: 1.5rem;
         padding: 5px;
+        color: color(light-yellow);
       }
       div {
         // border: 2px solid red;
@@ -64,7 +65,8 @@ $ipad: 768px;
           border-left: none;
           border-bottom: 1px solid black;
           text-align: center;
-          width: 250px;
+          width: 200px;
+          font-family: "Assistant";
         }
         input[type="email"] {
           padding: 10px;
@@ -73,7 +75,8 @@ $ipad: 768px;
           border-left: none;
           border-bottom: 1px solid black;
           text-align: center;
-          width: 250px;
+          width: 200px;
+          font-family: "Assistant";
         }
         .label {
           // border: 2px solid blue;
@@ -84,11 +87,13 @@ $ipad: 768px;
           width: 200px;
           height: 50px;
           margin-top: 15px;
-          margin-right: 10px;
+          margin-right: 2px;
           border-top: none;
           border-right: none;
           border-left: none;
           border-bottom: 1px solid black;
+          font-family: "Assistant";
+          text-align: center;
           @include mobile() {
             margin-right: 0;
           }
@@ -104,7 +109,7 @@ $ipad: 768px;
           padding: 5px;
           width: 95px;
           border-radius: 37px;
-          margin-left: 60px;
+          margin-left: 15px;
           @include mobile() {
             margin-left: -10px;
           }
