contact form fixed

--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -3,3 +3,11 @@
   border: 2px solid red;
   text-align: center;
 }
+
+.project-one {
+  border: 2px solid blue;
+  img {
+    height: 170px;
+    // border: 2px solid purple;
+  }
+}
