--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -1,3 +1,20 @@
+@mixin media-md {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
+@mixin media-lg {
+  @media screen and (min-width: 1024px) {
+    @content;
+  }
+}
+@mixin media-xl {
+  @media screen and (min-width: 1600px) {
+    @content;
+  }
+}
+
+
 $padding: 5%;
 $colors: (
   grey-blue: hsl(227, 12%, 61%),
